# NeuralNetworkLib

./: CMakeLists.txt
NeuralNetworkLib/: CMakeLists.txt  NeuralNetworkLib.cpp  NeuralNetworkLib.h  main.c  matrix.c  matrix.h
